fixed horizontal scroll & top button now in jquery

--- a/css/styles.css
+++ b/css/styles.css
@@ -35,12 +35,12 @@ span {
 
 
 /* 4. Body Styles */
+html {
+    overflow-x: hidden;
+}
 html, body{
     margin: 0;
     padding: 0;
-}
-body {
-    max-width: 381px;
 }
 
 .container {
@@ -58,8 +58,8 @@ body {
 }
 .slider-inner img {
     display: none;
-    margin: 10% 0 0 1.5%;
-    width: 375px;
+    margin: 10% 0 0 2.75%;
+    width: 95%;
     float: left;
 }
 .slider-inner img.active {
@@ -78,7 +78,7 @@ body {
     left: 1.5%;
 }
 .next {
-    right: 1%;
+    right: 1.5%;
     z-index: 9000;
 }
 #accordionstoresAccordion {
@@ -93,16 +93,18 @@ body {
 div[class="card mb-3 col-10"] {
     margin-top: 5%;
 } 
+.card {
+    margin-top: 5%;
+}
 #behaveLC {
     width : 18%
 }
 #behaveLC2 {
     font-size: 1.15em; 
 }
-#toTop {
-    margin: 2% 0 5% 75%;
-}
-footer a, button a {
+
+
+footer a {
     text-decoration: none;
     color: black
 }
@@ -118,44 +120,14 @@ footer {
 @media only screen and (min-width: 1260px){
 
     /* 1. Header Styles */
-    header, footer {
+   /*  header, footer {
         margin-left: 0%
-    }
+    } */
     /* 2. Navgation Styles */
 
     /* 3. Heading Styles */
 
     /* 4. Body Styles */
-    div[class*="col-"] {
-        width: unset;
-    }  
-    html {
-        max-width: 99%;
-    }
-    body{
-        max-width: 100%;
-    }
-    .prev, .next {
-        margin: 0;
-    }
-    .container {
-        margin: 0 auto;
-    }
-    .slider-inner {
-         position: relative;
-         float: left;
-         padding: 3px;
-         margin-left: 28.75%
-         
-    }
-    .slider-inner img {
-        margin: 10% 0 0 0%;
-        width: 150%;
-        height: 250px
-    }
-    .slider-inner img:nth-of-type(2) {
-        width: 175%;
-    }
     .next, .prev {
         margin-top: 10%;
         
@@ -168,34 +140,6 @@ footer {
          margin-right: 20%;
          z-index: 9000;
     }
-    #storesAccordion {
-        width: 65%;
-        margin-left: 17.5%;
-    }
-    div[class="card mb-3 col-10"] {
-        
-    }
-    .row:nth-of-type(3), .row:nth-of-type(4), .row:nth-of-type(5) {
-        margin: 3% 0 0 3%;
-        width: 25%;
-        float: left
-    }
-    .row:nth-of-type(3) {
-        margin-left: 6%
-    }
-    div[class="card mb-3 col-10"]:nth-of-type(2){
-        margin-left: 10%
-    }
-  /*   div[class="card mb-3 col-10"]:nth-of-type(3){
-        margin-left: 5%
-    } */
-    /* div[class="card mb-3 col-10"]:nth-of-type(4){
-        margin-left: 33%
-    } */
-    #toTop1 {
-        clear: both
-    }
-
      /* 5. Footer Styles */
 
      footer {
